--- a/onemonthhtml/about-clayton/css/style.css
+++ b/onemonthhtml/about-clayton/css/style.css
@@ -1,7 +1,9 @@
 body {
   line-height: 1.5;
-
+  color: white;
+  font-family: Monaco;
   /* Full Page Background Receipe */
+  background: url('../images/shell-bg.jpg'); 
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -10,4 +12,25 @@ body {
 .container {
   width: 500px;
   margin: 40px;
+  background: rgba(80, 68, 48, 0.75);
+  padding: 15px;
+  border-radius: 15px;
+}
+
+h1 {
+	font-size: 35px;
+	margin-bottom: -15px;
+}
+
+h2 {
+	font-size: 20px;
+}
+
+p {
+	font-size: 15px;
+}
+
+a {
+	color: #E1AE9C;
+	text-decoration: none;
 }
