some more tweaks to about page

--- a/onemonthhtml/about-clayton/css/style.css
+++ b/onemonthhtml/about-clayton/css/style.css
@@ -1,7 +1,7 @@
 body {
 	line-height: 1.5;
   	color: white;
-  	font-family: Monaco;
+  	font-family: 'Inconsolata', arial;
   	/* Full Page Background Receipe */
   	background: url('../images/shell-bg.jpg'); 
   	background-size: cover;
@@ -10,20 +10,31 @@ body {
 }
 
 .container {
-  	width: 500px;
+  	width: 400px;
 	margin: 40px;
 	background: rgba(80, 68, 48, 0.75);
 	padding: 15px;
 	border-radius: 15px;
 }
 
+.social_icons {
+	position: absolute;
+	top: 40px;
+	right: 40px;
+}
+
 h1 {
-	font-size: 35px;
+	font-size: 50px;
 	margin-bottom: -15px;
 }
 
 h2 {
+	font-size: 30px;
+}
+
+h3 {
 	font-size: 20px;
+	margin-bottom: -20px;
 }
 
 p {
@@ -33,4 +44,9 @@ p {
 a {
 	color: #E1AE9C;
 	text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
 }
